packages/build/tests/error/fixtures/exception_array/plugin.js
module.exports = {
  onPreBuild() {
    throw [new Error('test'), new Error('testTwo')]
  },
}
